--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,7 +12,8 @@ requires-python = ">=3.12"
 dependencies = [
     "apache-beam[gcp]>=2.66.0",
     "click>=8.3.0",
-    "mcp>=1.20.0",
+    "httpx>=0.28.1",
+    "mcp[cli]>=1.20.0",
 ]
 
 [project.scripts]
@@ -20,3 +21,6 @@ dataflow-create = "cli.cli:cli"
 
 [tool.setuptools.packages.find]
 where = ["."]
+
+[tool.uv.workspace]
+members = ["weather"]
