--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,9 +5,8 @@ build-backend = "setuptools.build_meta"
 [project]
 name = "dataflow_template"
 version = "0.1.0"
-description = "Unified Dataflow template with CLI and MCP server"
+description = "MCP server for Dataflow template creation"
 authors = [{ name = "Bharath Velamala" }]
-readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
     "apache-beam[gcp]>=2.66.0",
@@ -16,6 +15,7 @@ dependencies = [
     "mcp[cli]>=1.20.0",
     "uvicorn[standard]>=0.30.0",
     "fastmcp>=0.9.0",
+    "ruff>=0.1.0",
 ]
 
 [project.scripts]
@@ -24,5 +24,16 @@ dataflow-create = "cli.cli:cli"
 [tool.setuptools.packages.find]
 where = ["."]
 
+[tool.ruff]
+line-length = 100
+target-version = "py312"
+
+[tool.ruff.lint]
+select = ["E", "F", "I", "N", "W", "UP"]
+ignore = []
+
+[tool.ruff.lint.isort]
+known-first-party = ["mcp_server", "cli"]
+
 [tool.uv.workspace]
-members = ["weather"]
+members = []
