--- a/pyproject.toml
+++ b/pyproject.toml
@@ -34,7 +34,13 @@ select = ["E", "F", "I", "N", "W", "UP"]
 ignore = []
 
 [tool.ruff.lint.isort]
-known-first-party = ["mcp_server", "cli"]
+known-first-party = ["mcp_server", "cli", "tests"]
+
+[tool.pytest.ini_options]
+testpaths = ["tests"]
+python_files = ["test_*.py"]
+python_classes = ["Test*"]
+python_functions = ["test_*"]
 
 [tool.uv.workspace]
 members = []
